--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
       </div>
       <div class="paymentCard-design">
         <img class="card-design" src="./images/bg-card-back.png" alt="">
-        <img class="payment-card" src="./images/bg-card-front.png" alt="">
+        <div class="payment-card">
+          <div class="cercles">
+            <div class="big-cercle"></div>
+            <div class="small-cercle"></div>
+          </div>
+          <p> 0000 0000 0000 0000</p>
+          <div class="info">
+            <p>Jane Appleseed</p>
+            <p>  00/00</p>
+          </div>
+        </div>
       </div>
     </section>
     <div class="section2">
