--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor - Interactive card details form</title>
 </head>
+
 <body>
   <main>
     <section class="section1">
@@ -21,40 +23,48 @@
             <div class="big-cercle"></div>
             <div class="small-cercle"></div>
           </div>
-          <p> 0000 0000 0000 0000</p>
-          <div class="info">
-            <p>Jane Appleseed</p>
-            <p>  00/00</p>
+          <div class="card-info">
+            <p> 0000 0000 0000 0000</p>
+            <div class="info">
+              <p>Jane Appleseed</p>
+              <p> 00/00</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <div class="section2">
-      <div class="card-owner">
-        <label for="">Cardholder Name</label>
-        <input type="text" placeholder="e.g. Jane Appleseed">
-      </div>
-      <div class="card-number">
-        <label for="">Card Number</label>
-        <input type="text" placeholder="e.g. 1234 5678 9123 0000">
-      </div>
-      <div class="expDate-Cvc-Container">
+      <div class="dd">
+        <div class="card-owner">
+          <label for="">Cardholder Name</label>
+          <input type="text" placeholder="e.g. Jane Appleseed">
+        </div>
+        <div class="card-number">
+          <label for="">Card Number</label>
+          <input type="text" placeholder="e.g. 1234 5678 9123 0000">
+        </div>
+        <div class="expDate-Cvc-Container">
 
-        <div class="exp-date">
-          <label for=""> Exp. Date (MM/YY)</label>
-          <div class="experation-container">
-            <input id="month" type="text" placeholder="MM">
-            <input id="year" type="text" placeholder="YY">
+          <div class="exp-date">
+            <label for=""> Exp. Date (MM/YY)</label>
+            <div class="experation-container">
+              <input id="month" type="text" placeholder="MM">
+              <input id="year" type="text" placeholder="YY">
+            </div>
+          </div>
+          <div class="cvc">
+            <label for="">Cvc</label>
+            <input type="text" placeholder='e.g. 123'>
           </div>
         </div>
-        <div class="cvc">
-          <label for="">Cvc</label>
-          <input type="text"placeholder='e.g. 123'>
-        </div>
+        <button type="submit">Confirm</button>
+
+
       </div>
-      <button type="submit" >Confirm</button>
     </div>
+
   </main>
 </body>
 <script src="app.js"></script>
+
 </html>
