--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </section>
     <div class="section2">
-      <div class="dd">
+      <form id="form" action="">
         <div class="card-owner">
           <label for="">Cardholder Name</label>
           <input type="text" placeholder="e.g. Jane Appleseed">
@@ -60,7 +60,7 @@
         <button type="submit">Confirm</button>
 
 
-      </div>
+      </form>
     </div>
 
   </main>
