--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="small-cercle"></div>
           </div>
           <div class="card-info">
-            <p> 0000 0000 0000 0000</p>
+            <p id="printed-CardNumber"> 0000 0000 0000 0000</p>
             <div class="info">
               <p id="printed-owner">Jane Appleseed</p>
               <p> 00/00</p>
@@ -35,12 +35,12 @@
         <div class="card-owner">
           <label for="owner-name">Cardholder Name</label>
           <input class="input" id="owner-name" type="text" placeholder="e.g. Jane Appleseed"required>
-          <div id="message" class=""></div>
+          <div id="1" class="message"></div>
         </div>
         <div class="card-number">
           <label for="card-num">Card Number</label>
           <input id="card-num" type="text" placeholder="e.g. 1234 5678 9123 0000" required>
-          <div id="message" class=""></div>
+          <div id="2" class="message"></div>
 
         </div>
         <div class="expDate-Cvc-Container">
@@ -49,12 +49,18 @@
             <label for=""> Exp. Date (MM/YY)</label>
             <div class="experation-container">
               <input id="month" type="text" placeholder="MM"required>
+            
+
               <input id="year" type="text" placeholder="YY"required>
+              
             </div>
+            <div id="3" class="message"></div>
           </div>
           <div class="cvc">
             <label for="cvc-num">Cvc</label>
             <input id="cvc-num" type="text" placeholder='e.g. 123' required>
+            <div id="4" class="message"></div>
+
           </div>
         </div>
         <button type="submit">Confirm</button>
